err/maildump.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Assets-0.12.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cssmin-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/cssprefixer'...
Compiling './lib/python3.5/site-packages/cssprefixer/engine.py'...
***   File "./lib/python3.5/site-packages/cssprefixer/engine.py", line 56
    print 'warning with ' + str(rule)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cssprefixer-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/cssutils'...
Listing './lib/python3.5/site-packages/cssutils/css'...
Listing './lib/python3.5/site-packages/cssutils/scripts'...
Listing './lib/python3.5/site-packages/cssutils/stylesheets'...
Listing './lib/python3.5/site-packages/cssutils/tests'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/images'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/import/images2'...
Listing './lib/python3.5/site-packages/cssutils/tests/sheets/var'...
Listing './lib/python3.5/site-packages/cssutils/tests/test_encutils'...
Listing './lib/python3.5/site-packages/cssutils-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/encutils'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
